#482 fixed past date error, select box alignment, budget update on cn

--- a/sass/pages/experiences/itinerary-request2.scss
+++ b/sass/pages/experiences/itinerary-request2.scss
@@ -233,7 +233,7 @@ h1 {
   background-color: inherit;
   border: 0;
   color: $medium-grey;
-  height: 120px;
+  height: 120px !important;
   &:focus {
     border: 0;
     outline: none;
